--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         <a href="/" class="text-decoration-none ctrl-img d-lg-none d-block">
           <img src="./images/logo-sm.jpeg" alt="Logo" class="img-fluid">
         </a>
-        <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
-        </button> -->
+        </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav mx-auto">
             <li class="margin_r_116p">
@@ -75,30 +75,30 @@
             the leads you're seeking!</h3>
 
           <div class="row align-items-center custom-padding-top">
-            <div class="col-md-2">
-              <img src="./images/check-img.png" alt="">
+            <div class="col-lg-2 col-3">
+              <img src="./images/check-img.png" alt="" class="img-fluid">
             </div>
-            <div class="col-md-6">
+            <div class="col-lg-6 col-9">
               <div class="feature-title">Real-time Connections</div>
               <div class="feature-sub-title">Instantaneous</div>
             </div>
           </div>
 
           <div class="row align-items-center custom-padding-top">
-            <div class="col-md-2">
-              <img src="./images/check-img.png" alt="">
+            <div class="col-lg-2 col-3">
+              <img src="./images/check-img.png" alt="" class="img-fluid">
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 col-9">
               <div class="feature-title">Completely Exclusive</div>
               <div class="feature-sub-title">Never Re-Sold</div>
             </div>
           </div>
 
           <div class="row align-items-center custom-padding-top">
-            <div class="col-md-2">
-              <img src="./images/check-img.png" alt="">
+            <div class="col-lg-2 col-3">
+              <img src="./images/check-img.png" alt="" class="img-fluid">
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 col-9">
               <div class="feature-title">Assured Excellence</div>
               <div class="feature-sub-title">Thoroughly Authenticated</div>
             </div>
@@ -246,10 +246,10 @@
           </p>
 
           <div class="row align-items-center custom-padding-top">
-            <div class="col-md-2">
+            <div class="col-lg-2 col-md-3 col-12 text-center">
               <img src="./images/card-img.jpeg" alt="">
             </div>
-            <div class="col-md-10">
+            <div class="col-lg-6 col-md-9 col-12">
               <div class="feature-title">Innovative Marketing</div>
               <div class="feature-sub-title">Our creative and data-driven marketing strategies set us apart, helping you
                 stand out in a competitive legal landscape</div>
@@ -257,10 +257,10 @@
           </div>
 
           <div class="row align-items-center custom-padding-top">
-            <div class="col-md-2">
+            <div class="col-lg-2 col-md-3 col-12 text-center">
               <img src="./images/card-img.jpeg" alt="">
             </div>
-            <div class="col-md-10">
+            <div class="col-lg-6 col-md-9 col-12">
               <div class="feature-title">Client-Centric Approach</div>
               <div class="feature-sub-title">Your success is our priority. We work closely with you to understand your
                 goals and provide personalized support</div>
@@ -268,10 +268,10 @@
           </div>
 
           <div class="row align-items-center custom-padding-top">
-            <div class="col-md-2">
+            <div class="col-lg-2 col-md-3 col-12 text-center">
               <img src="./images/card-img.jpeg" alt="">
             </div>
-            <div class="col-md-10">
+            <div class="col-lg-6 col-md-9 col-12">
               <div class="feature-title">Quality Leads</div>
               <div class="feature-sub-title">We specialize in generating high-quality leads that convert, ensuring you
                 focus your efforts where they matter most.</div>
@@ -279,10 +279,10 @@
           </div>
 
           <div class="row align-items-center custom-padding-top">
-            <div class="col-md-2">
+            <div class="col-lg-2 col-md-3 col-12 text-center">
               <img src="./images/card-img.jpeg" alt="">
             </div>
-            <div class="col-md-10">
+            <div class="col-lg-6 col-md-9 col-12">
               <div class="feature-title">Proven Expertise</div>
               <div class="feature-sub-title">With years of experience in the legal industry, we understand the unique
                 challenges you face. We leverage this knowledge to deliver tailored solutions.</div>
