--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <a href="/" class="text-decoration-none ctrl-img d-lg-none d-block">
           <img src="./images/logo-sm.jpeg" alt="Logo" class="img-fluid">
         </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
@@ -158,8 +158,8 @@
           <div class="col-lg-3 col-md-4 col-12">
             <div class="card">
               <div class="card-body">
-                <div class="text-center">
-                  <img src="./images/card-img.jpeg" alt="">
+                <div class="text-center icon_150 mb-4">
+                 <i class="fa-solid fa-handshake-simple"></i>
                 </div>
                 <h1 class="mb-3">Inquire</h1>
                 <p>
@@ -174,8 +174,8 @@
           <div class="col-lg-3 col-md-4 col-12">
             <div class="card">
               <div class="card-body">
-                <div class="text-center">
-                  <img src="./images/card-img.jpeg" alt="">
+                <div class="text-center icon_150 mb-4">
+                 <i class="fa-solid fa-handshake-simple"></i>
                 </div>
                 <h1 class="mb-3">Intake</h1>
                 <p>
@@ -190,8 +190,8 @@
           <div class="col-lg-3 col-md-4 col-12">
             <div class="card">
               <div class="card-body">
-                <div class="text-center">
-                  <img src="./images/card-img.jpeg" alt="">
+                <div class="text-center icon_150 mb-4">
+                 <i class="fa-solid fa-handshake-simple"></i>
                 </div>
                 <h1 class="mb-3">Verify</h1>
                 <p>
@@ -206,8 +206,8 @@
           <div class="col-lg-3 col-md-4 col-12">
             <div class="card">
               <div class="card-body">
-                <div class="text-center">
-                  <img src="./images/card-img.jpeg" alt="">
+                <div class="text-center icon_150 mb-4">
+                 <i class="fa-solid fa-handshake-simple"></i>
                 </div>
                 <h1 class="mb-3">Transfer</h1>
                 <p>
@@ -246,8 +246,8 @@
           </p>
 
           <div class="row align-items-center custom-padding-top">
-            <div class="col-lg-2 col-md-3 col-12 text-center">
-              <img src="./images/card-img.jpeg" alt="">
+            <div class="col-lg-2 col-md-3 col-12 text-center icon_150">
+             <i class="fa-solid fa-handshake-simple"></i>
             </div>
             <div class="col-lg-6 col-md-9 col-12">
               <div class="feature-title">Innovative Marketing</div>
@@ -257,8 +257,8 @@
           </div>
 
           <div class="row align-items-center custom-padding-top">
-            <div class="col-lg-2 col-md-3 col-12 text-center">
-              <img src="./images/card-img.jpeg" alt="">
+            <div class="col-lg-2 col-md-3 col-12 text-center icon_150">
+             <i class="fa-solid fa-handshake-simple"></i>
             </div>
             <div class="col-lg-6 col-md-9 col-12">
               <div class="feature-title">Client-Centric Approach</div>
@@ -268,8 +268,8 @@
           </div>
 
           <div class="row align-items-center custom-padding-top">
-            <div class="col-lg-2 col-md-3 col-12 text-center">
-              <img src="./images/card-img.jpeg" alt="">
+            <div class="col-lg-2 col-md-3 col-12 text-center icon_150">
+             <i class="fa-solid fa-handshake-simple"></i>
             </div>
             <div class="col-lg-6 col-md-9 col-12">
               <div class="feature-title">Quality Leads</div>
@@ -279,8 +279,8 @@
           </div>
 
           <div class="row align-items-center custom-padding-top">
-            <div class="col-lg-2 col-md-3 col-12 text-center">
-              <img src="./images/card-img.jpeg" alt="">
+            <div class="col-lg-2 col-md-3 col-12 text-center icon_150">
+             <i class="fa-solid fa-handshake-simple"></i>
             </div>
             <div class="col-lg-6 col-md-9 col-12">
               <div class="feature-title">Proven Expertise</div>
