--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
           <div class="col-lg-3 col-md-4 col-12">
             <div class="card">
               <div class="card-body">
-                <div class="text-center icon_150 mb-4">
+                <div class="text-center icon_150 mb-md-4 mb-3">
                  <i class="fa-solid fa-handshake-simple"></i>
                 </div>
                 <h1 class="mb-3">Inquire</h1>
@@ -174,7 +174,7 @@
           <div class="col-lg-3 col-md-4 col-12">
             <div class="card">
               <div class="card-body">
-                <div class="text-center icon_150 mb-4">
+                <div class="text-center icon_150 mb-md-4 mb-3">
                  <i class="fa-solid fa-handshake-simple"></i>
                 </div>
                 <h1 class="mb-3">Intake</h1>
@@ -190,7 +190,7 @@
           <div class="col-lg-3 col-md-4 col-12">
             <div class="card">
               <div class="card-body">
-                <div class="text-center icon_150 mb-4">
+                <div class="text-center icon_150 mb-md-4 mb-3">
                  <i class="fa-solid fa-handshake-simple"></i>
                 </div>
                 <h1 class="mb-3">Verify</h1>
@@ -206,7 +206,7 @@
           <div class="col-lg-3 col-md-4 col-12">
             <div class="card">
               <div class="card-body">
-                <div class="text-center icon_150 mb-4">
+                <div class="text-center icon_150 mb-md-4 mb-3">
                  <i class="fa-solid fa-handshake-simple"></i>
                 </div>
                 <h1 class="mb-3">Transfer</h1>
